--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <!-- Required meta tags -->
@@ -10,13 +10,13 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"/>
-    <title>Register - ToDoList</title>
+    <title>Register</title>
 </head>
 
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">ToDo</a>
+    <a class="navbar-brand" th:href="@{/}">ToDo</a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,56 +26,39 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="@{/}">List</a>
+                <a class="nav-link" th:href="@{/}">List</a>
             </li>
         </ul>
 
-        <form class="form-inline my-2 my-lg-0" action="#" method="post">
-            <button class="btn btn-outline-success my-2 my-sm-0">Logout</button>
+        <form class="form-inline my-2 my-lg-0">
+            <a class="btn btn-outline-success my-2 my-sm-0" th:href="@{/login}">Login</a>
+            <a class="btn btn-outline-success my-2 my-sm-0" href="#">Logout</a>
+            <a class="btn btn-outline-success my-2 my-sm-0" th:href="@{/register}">Register</a>
         </form>
-        <div class="form-inline my-2 my-lg-0">
-            <a class="btn btn-outline-success my-2 mr-2 my-sm-0" href="#">Login</a>
-        </div>
     </div>
 </nav>
 
 <div class="container">
     <div class="row py-2">
         <div class="col-12">
-            <form action="#" method="post">
+            <form th:action="@{/register}" method="post" th:object="${userCredentials}">
                 <div class="form-group">
-                    <label for="username">User name</label>
-                    <input type="text" id="username" class="form-control" placeholder="Enter user name">
-                    <small class="form-text text-danger" >Validation error</small>
+                    <label>User name</label>
+                    <input type="text" class="form-control" th:field="*{username}" placeholder="Enter user name">
+                    <small class="text-danger" th:each="error: ${#fields.errors('username')}" th:text="${error}"></small>
                 </div>
                 <div class="form-group">
-                    <label for="password">Password</label>
-                    <input type="password" id="password" class="form-control" placeholder="Password">
-                    <small class="form-text text-danger">Validation error</small>
+                    <label>Password</label>
+                    <input type="password" class="form-control" th:field="*{password}" placeholder="Password">
+                    <small class="text-danger" th:each="error: ${#fields.errors('password')}" th:text="${error}"></small>
                 </div>
                 <div class="form-group">
-                    <label for="repeatPassword">Repeat password</label>
-                    <input type="password" id="repeatPassword" class="form-control" placeholder="Repeat password">
-                    <small class="form-text text-danger">Validation error</small>
+                    <label>Confirm password</label>
+                    <input type="password" class="form-control" th:field="*{confirmedPassword}" placeholder="Confirm password">
+                    <small class="text-danger" th:each="error: ${#fields.errors('confirmedPassword')}" th:text="${error}"></small>
                 </div>
                 <button type="submit" class="btn btn-primary">Register</button>
             </form>
         </div>
     </div>
 </div>
-
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
-
-</body>
-
-</html>
