Added security support

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,5 +1,7 @@
 <!doctype html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
     <!-- Required meta tags -->
@@ -30,10 +32,10 @@
             </li>
         </ul>
 
-        <form class="form-inline my-2 my-lg-0">
-            <a class="btn btn-outline-success my-2 my-sm-0" th:href="@{/login}">Login</a>
-            <a class="btn btn-outline-success my-2 my-sm-0" href="#">Logout</a>
-            <a class="btn btn-outline-success my-2 my-sm-0" th:href="@{/register}">Register</a>
+        <form class="form-inline my-2 my-lg-0" th:action="@{/logout}" method="post">
+            <a sec:authorize="isAnonymous()" class="btn btn-outline-success my-2 mr-2 my-sm-0" th:href="@{/login}">Login</a>
+            <button sec:authorize="isAuthenticated()" class="btn btn-outline-danger my-2 mr-2 my-sm-0">Logout</button>
+            <a sec:authorize="isAnonymous()" class="btn btn-outline-success my-2 my-sm-0" th:href="@{/register}">Register</a>
         </form>
     </div>
 </nav>
@@ -41,10 +43,11 @@
 <div class="container">
     <div class="row py-2">
         <div class="col-12">
-            <form>
+            <form th:action="@{/authenticate}" method="post">
                 <div class="form-group">
                     <label for="username">User name</label>
-                    <input type="text" class="form-control" id="username" name="username" placeholder="Enter userCredentials name">
+                    <input type="text" class="form-control" id="username" name="username" placeholder="Enter user name">
+                    <small class="form-text text-danger" th:if="${param.error != null}">Incorrect user name or password</small>
                 </div>
                 <div class="form-group">
                     <label for="password">Password</label>
