--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,5 +1,7 @@
 <!doctype html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
     <!-- Required meta tags -->
@@ -30,10 +32,10 @@
             </li>
         </ul>
 
-        <form class="form-inline my-2 my-lg-0">
-            <a class="btn btn-outline-success my-2 my-sm-0" th:href="@{/login}">Login</a>
-            <a class="btn btn-outline-success my-2 my-sm-0" href="#">Logout</a>
-            <a class="btn btn-outline-success my-2 my-sm-0" th:href="@{/register}">Register</a>
+        <form class="form-inline my-2 my-lg-0" th:action="@{/logout}" method="post">
+            <a sec:authorize="isAnonymous()" class="btn btn-outline-success my-2 mr-2 my-sm-0" th:href="@{/login}">Login</a>
+            <button sec:authorize="isAuthenticated()" class="btn btn-outline-danger my-2 mr-2 my-sm-0">Logout</button>
+            <a sec:authorize="isAnonymous()" class="btn btn-outline-success my-2 my-sm-0" th:href="@{/register}">Register</a>
         </form>
     </div>
 </nav>
